--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,4 +26,6 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: msi-installer
+        overwrite: true
+        include-hidden-files: true
         path: .build/**/*.msi
