--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Archive .msi installer
       uses: actions/upload-artifact@v4
       with:
-        name: msi-installer
+        name: fesh-revit-installer
         overwrite: true
         include-hidden-files: true
         path: .build/**/*.msi
